--- a/.github/workflows/submodule-update.yml
+++ b/.github/workflows/submodule-update.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           github_token: ${{ secrets.RELEASE_HUB_SECRET }}
           parent_repository: ytulu/tuluco
-          parent_branch: main
+          parent_branch: staging
